// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-fucOQC {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-fucOQC:focus,
  .c-fucOQC:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-fucOQC:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-fucOQC,
  .c-jryFOR > .c-fucOQC,
  .c-PJLV > .c-fucOQC,
  .c-bYNGXt > .c-fucOQC {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-fucOQC::before,
  .c-dyvMgW > .c-fucOQC::after,
  .c-jryFOR > .c-fucOQC::before,
  .c-jryFOR > .c-fucOQC::after,
  .c-PJLV > .c-fucOQC::before,
  .c-PJLV > .c-fucOQC::after,
  .c-bYNGXt > .c-fucOQC::before,
  .c-bYNGXt > .c-fucOQC::after {
    content: none;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-fucOQC-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fucOQC-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fucOQC-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fucOQC-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-fucOQC-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-fucOQC-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-fucOQC-hUrFFO-noCapsize-true::before,
  .c-fucOQC-hUrFFO-noCapsize-true::after {
    display: none;
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md {
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-jryFOR-fOoUdm-size-md::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-fOoUdm-size-md::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md"
  >
    <button
      class="c-fucOQC c-fucOQC-gvmVBy-size-md c-fucOQC-hUrFFO-noCapsize-true"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-jryFOR c-jryFOR-fOoUdm-size-md"
  >
    <button
      class="c-fucOQC c-fucOQC-gvmVBy-size-md c-fucOQC-hUrFFO-noCapsize-true"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-fucOQC {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-fucOQC:focus,
  .c-fucOQC:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-fucOQC:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-fucOQC,
  .c-jryFOR > .c-fucOQC,
  .c-PJLV > .c-fucOQC,
  .c-bYNGXt > .c-fucOQC {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-fucOQC::before,
  .c-dyvMgW > .c-fucOQC::after,
  .c-jryFOR > .c-fucOQC::before,
  .c-jryFOR > .c-fucOQC::after,
  .c-PJLV > .c-fucOQC::before,
  .c-PJLV > .c-fucOQC::after,
  .c-bYNGXt > .c-fucOQC::before,
  .c-bYNGXt > .c-fucOQC::after {
    content: none;
  }
}

@media  {
  .c-fucOQC-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fucOQC-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fucOQC-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-fucOQC c-fucOQC-gvmVBy-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-fucOQC {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-fucOQC:focus,
  .c-fucOQC:hover {
    color: var(--colors-primaryMid);
    text-decoration: underline;
  }

  .c-fucOQC:active {
    color: var(--colors-primaryDark);
  }

  .c-dyvMgW > .c-fucOQC,
  .c-jryFOR > .c-fucOQC,
  .c-PJLV > .c-fucOQC,
  .c-bYNGXt > .c-fucOQC {
    font-size: 100%;
    line-height: 1;
  }

  .c-dyvMgW > .c-fucOQC::before,
  .c-dyvMgW > .c-fucOQC::after,
  .c-jryFOR > .c-fucOQC::before,
  .c-jryFOR > .c-fucOQC::after,
  .c-PJLV > .c-fucOQC::before,
  .c-PJLV > .c-fucOQC::after,
  .c-bYNGXt > .c-fucOQC::before,
  .c-bYNGXt > .c-fucOQC::after {
    content: none;
  }
}

@media  {
  .c-fucOQC-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-fucOQC-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-fucOQC-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-fucOQC-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-fucOQC-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-fucOQC-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-fucOQC c-fucOQC-jvTRJO-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
